--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
   <groupId>github.vikram.javaee</groupId>
   <artifactId>ejb</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
 
   <name>ejb</name>
   <url>http://maven.apache.org</url>
@@ -16,10 +15,46 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.glassfish.main.extras</groupId>
+      <artifactId> glassfish-embedded-all </artifactId>
+      <version>4.0</version>
+      <scope>provided</scope>
+    </dependency>
+	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.5.1</version>
+        <configuration>
+          <source>1.7</source>
+          <target>1.7</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.12.4</version>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+  
 </project>
