--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,43 @@
   </properties>
 
   <dependencies>
+  <dependency>
+	<groupId>org.eclipse.persistence</groupId>
+	<artifactId>org.eclipse.persistence.jpa</artifactId>
+	<version>2.6.0</version>
+	</dependency>
+	
+	 <dependency>
+	<groupId>org.jboss.weld.se</groupId>
+	<artifactId>weld-se-core</artifactId>
+	<version>2.2.11.Final</version>
+	</dependency>
+	 <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId> hibernate-validator </artifactId>
+      <version>5.0.0.Final</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId> derbyclient </artifactId>
+      <version>10.9.1.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId> derby </artifactId>
+      <version>10.9.1.0</version>
+      <scope> test </scope>
+    </dependency>
+  
     <dependency>
       <groupId>org.glassfish.main.extras</groupId>
       <artifactId> glassfish-embedded-all </artifactId>
       <version>4.0</version>
       <scope>provided</scope>
     </dependency>
+    
 	<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -27,8 +58,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  
-  
+ 
   
   <build>
     <plugins>
